--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,5 +1,14 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
   "version": "1.0.0",
-  "scripts": {}
+  "source": "src/main.ts",
+  "main": "dist/main.js",
+  "scripts": {
+    "dev": "parcel index.html",
+    "build": "parcel build"
+  },
+  "devDependencies": {
+    "parcel": "^2.7.0",
+    "typescript": "^4.8.3"
+  }
 }
