--- a/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
+++ b/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
@@ -2,13 +2,16 @@
   "name": "w01e01-typescript-basics",
   "version": "1.0.0",
   "scripts": {
-    "prebuild":"rm -rf dist",
-    "build":"tsc -w ./src/main.ts --noImplicitAny --removeComments --outDir dist",
+    "prebuild": "rm -rf dist",
+    "build": "tsc -w ./src/main.ts --noImplicitAny --removeComments --outDir dist",
     "prestart": "npm run build",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "dev":"nodemon ./src/main.ts"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
