Absolute path added to project

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
@@ -6,6 +6,9 @@
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "allowJs": true,
     "strict": true,
     "sourceMap": true,
