Add solution to the W01E01 exercise

--- a/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
+++ b/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
@@ -1,5 +1,11 @@
 {
   "name": "w01e01-typescript-basics",
+  "author": "Dariusz Gala",
   "version": "1.0.0",
-  "scripts": {}
+  "scripts": {
+    "start": "npx tsx src/*"
+  },
+  "devDependencies": {
+    "typescript": "4.8.3"
+  }
 }
