--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,5 +1,20 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
+  "author": "Dariusz Gala",
   "version": "1.0.0",
-  "scripts": {}
+  "scripts": {
+    "dev": "vite dev",
+    "prod": "vite build"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3",
+    "vite": "3.1.3",
+    "vite-plugin-eslint": "^1.8.1"
+  }
 }
