--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -1,5 +1,10 @@
 {
   "name": "w01e04-light-me-up",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "dev": "ts-node src/main.ts"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
