--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
@@ -1,5 +1,21 @@
 {
   "name": "w01e03-object-oriented-structure",
   "version": "1.0.0",
-  "scripts": {}
+  "scripts": {
+    "dev": "nodemon src/main.ts",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.0.3",
+    "@types/mocha": "^9.1.1",
+    "@types/uuid": "^8.3.4",
+    "jest": "^29.0.3",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
+  }
 }
