--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon src/main.ts",
+    "build": "tsc",
+    "build:vite": "vite build",
     "test": "jest"
   },
   "devDependencies": {
@@ -13,7 +15,9 @@
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "vite": "^2.9.15",
+    "vite-plugin-node": "^1.0.0"
   },
   "dependencies": {
     "uuid": "^9.0.0"
