--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
@@ -3,10 +3,13 @@
       "target": "ES2021",
       "types": ["@types/jest"],
       "module": "commonjs",
+      "outDir": "./dist",
+      "rootDir": "./src",
       "allowJs": false,
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "skipLibCheck": true
-    }
+    },
+    "exclude": ["./**/*.test.ts"]
   }
