--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,5 +1,26 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
-  "version": "1.0.0",
-  "scripts": {}
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint ./src/**/*.{js,ts}",
+    "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
+  }
 }
