--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src/**/*.{js,ts}",
+    "lint": "eslint ./src/**/*.ts",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "devDependencies": {
