--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
@@ -14,10 +14,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "noImplicitAny": false
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts", "./src/**/*.js"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["./dist/**", "./node_modules/**"]
 }
