--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
   }
