--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -9,6 +9,8 @@
   "devDependencies": {
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "prettier": "2.7.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
