--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,10 +1,10 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
   "version": "1.0.0",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
@@ -13,6 +13,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "prettier": "2.7.1",
     "typescript": "^4.8.3",
-    "vite": "^3.1.3"
+    "vite": "^3.1.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
