--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "vite build"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
