--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
-    "moduleResolution": "Node",
-    "strict": true,
-    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "allowJs": true,
+    "sourceMap": true,
+    "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
