--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
     "useDefineForClassFields": true,
-    "module": "ESNext",
+    "module": "ES2020",
     "moduleResolution": "node",
     "allowJs": true,
     "sourceMap": true,
