--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,10 +1,10 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
   "version": "1.0.0",
-  "type": "ts-standard",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "tsc && vite build"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.38.0",
@@ -16,5 +16,8 @@
     "typescript": "^4.8.3",
     "vite": "^3.1.3",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "dependencies": {
+    "eslint-import-resolver-typescript": "^3.5.1"
   }
 }
