--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/ts.config.json
@@ -1,21 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
-    "useDefineForClassFields": true,
-    "module": "ES2020",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "sourceMap": true,
-    "noEmit": true,
-    "isolatedModules": true,
+    "target": "ES2021",
+    "module": "commonjs",
+    "allowJs": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
     "skipLibCheck": true
-  },
-  "include": ["src"]
+  }
 }
