--- a/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
+++ b/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
@@ -1,9 +1,13 @@
 {
   "name": "w01e01-typescript-basics",
   "version": "1.0.0",
-  "scripts": {},
+  "scripts": {
+    "start": "ts-node src/main.ts",
+    "build": "tsc"
+  },
   "devDependencies": {
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "nodemon": "^2.0.20"
   }
 }
