--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -1,5 +1,12 @@
 {
   "name": "w01e04-light-me-up",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "start1": "ts-node src/solution1.ts",
+    "start2": "ts-node src/solution2.ts"
+
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
