--- a/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
+++ b/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
@@ -2,9 +2,12 @@
   "name": "w01e01-typescript-basics",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/main.ts"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
