added missing cart methods

--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/package.json
@@ -5,6 +5,8 @@
     "test": "echo \"Error: no tests installed\" && exit 1",
     "build": "tsc",
     "start": "ts-node src/main.ts"
-    
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
