--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
@@ -6,6 +6,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "downlevelIteration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "removeComments": true,
+    "noImplicitAny": true
   }
 }
