Remove allowjs rule from config

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
@@ -13,8 +13,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true,
-    "allowJs": true
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
