--- a/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e03-object-oriented-structure/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "target": "es2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
+    "declaration": true, // for d.ts file
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "./dist"
   },
   "include": [
-    "./src"
-  ]
+    "src/**/*"
+  ],
+  "exclude": ["node_modules"]
 }
