--- a/week-1-ts-ecosystem/w01e05-my-own-cli/package.json
+++ b/week-1-ts-ecosystem/w01e05-my-own-cli/package.json
@@ -1,10 +1,16 @@
 {
   "name": "w01e05-my-own-cli",
   "version": "1.0.0",
-  "main": "src/main.ts",
+  "type": "module",
+  "main": "src/main.js",
   "license": "MIT",
+  "scripts": {
+    "demo:prepare": "ts-node --esm src/main",
+    "demo:start": "ts-node --esm src/showcase-demo.ts"
+  },
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@types/inquirer": "^9.0.1",
     "chalk": "^5.0.1",
     "cli-table": "^0.3.11",
     "inquirer": "^9.1.2",
@@ -12,7 +18,14 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.21",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
+    "tsc-watch": "^5.0.3",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
   }
