--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./src/main.ts"
+    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm ./src/main.ts",
+    "start:zadanie2": "node --experimental-specifier-resolution=node --loader ts-node/esm ./src/zadanie_2.ts"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
