--- a/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
+++ b/week-1-ts-ecosystem/w01e01-typescript-basics/package.json
@@ -1,5 +1,12 @@
 {
   "name": "w01e01-typescript-basics",
   "version": "1.0.0",
-  "scripts": {}
+  "scripts": {
+    "start": "ts-node src/main.ts",
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
