--- a/week-2-wide-perspective/w02e03-pagination-problem/package.json
+++ b/week-2-wide-perspective/w02e03-pagination-problem/package.json
@@ -5,12 +5,12 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.1",
-    "lodash": "^4.17.21",
-    "lowdb": "^3.0.0"
+    "express": "4.18.1",
+    "lodash": "4.17.21",
+    "lowdb": "3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "2.0.20"
   },
   "type": "module"
 }
