--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "lib": ["DOM", "ES6"],
     "outDir": "./dist",
-    "strict": false,
-    "allowJs": true
+    "strict": true
   }
 }
