--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -1,12 +1,15 @@
 {
   "name": "w01e02-enter-the-world-of-typescript",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "parcel index.html watch",
-    "build": "parcel build"
+    "start": "parcel index.html",
+    "build:parcel": "parcel build index.html",
+    "clean": "rmdir /s/q dist",
+    "build": "npm run clean && npm run build:parcel"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.7.0",
     "typescript": "^4.8.4"
   }
 }
