--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "parcel index.html",
-    "build:parcel": "parcel build index.html",
+    "start": "parcel index.html -p 1234 --open",
+    "build:parcel": "parcel build index.html --public-url ./ --no-source-maps",
     "clean": "rmdir /s/q dist",
     "build": "npm run clean && npm run build:parcel"
   },
