--- a/week-1-ts-ecosystem/w01e04-light-me-up/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
