--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -1,5 +1,19 @@
 {
   "name": "w01e04-light-me-up",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "solution1": "nodemon src/solution1.ts",
+    "solution2": "nodemon src/solution2.ts"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
