--- a/week-2-wide-perspective/w02e01-functional-warm-up/package.json
+++ b/week-2-wide-perspective/w02e01-functional-warm-up/package.json
@@ -1,6 +1,11 @@
 {
   "name": "w02e01-functional-warm-up",
   "version": "1.0.0",
-  "dependencies": {},
-  "type": "module"
+  "dependencies": {
+    "typescript": "^4.8.4"
+  },
+  "type": "module",
+  "devDependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
