--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "test": "echo \"Error: no tests installed\" && exit 1",
     "build": "tsc",
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "dev": "nodemon src/main.ts"
   },
-  "dependencies": {
-    "test": "echo \"Error: no tests installed\" && exit 1",
-    "build": "tsc",
-    "start": "ts-node src/main.ts"
+  "devDependencies": {
+    "nodemon": "2.0.20",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   }
 }
