--- a/week-2-wide-perspective/w02e01-functional-warm-up/package.json
+++ b/week-2-wide-perspective/w02e01-functional-warm-up/package.json
@@ -1,6 +1,12 @@
 {
   "name": "w02e01-functional-warm-up",
   "version": "1.0.0",
-  "dependencies": {},
-  "type": "module"
+  "scripts": {
+    "watch": "nodemon --exec ts-node src/index.ts"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
