--- a/week-2-wide-perspective/w02e01-functional-warm-up/package.json
+++ b/week-2-wide-perspective/w02e01-functional-warm-up/package.json
@@ -1,6 +1,11 @@
 {
   "name": "w02e01-functional-warm-up",
   "version": "1.0.0",
-  "dependencies": {},
+  "scripts": {
+    "dev": "node src/main.js"
+  },
+  "devDependencies": {
+    "node": "^16.17.1"
+  },
   "type": "module"
 }
