--- a/week-1-ts-ecosystem/w01e05-my-own-cli/package.json
+++ b/week-1-ts-ecosystem/w01e05-my-own-cli/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "w01e05-my-own-cli",
+  "name": "w01e05-own-cli",
   "version": "1.0.0",
-  "description": "_~ \"Aplikacja do handlu\" strikes back 😱_",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "demo:prepare": "nodemon"
   },
-  "author": "",
-  "license": "ISC"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "18.7.20",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
+    "eslint": "8.22.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "nodemon": "2.0.20",
+    "prettier": "2.7.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
+  },
+  "dependencies": {
+    "@types/inquirer": "^9.0.2",
+    "@types/prompts": "^2.4.1",
+    "inquirer": "^9.1.2",
+    "prompts": "^2.4.2",
+    "uuid": "9.0.0"
+  }
 }
