api fetching and calculating proper data

--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -1,5 +1,8 @@
 {
   "name": "w02e02-data-manipulation",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.27.2",
+    "json-server": "^0.4.2"
+  }
 }
