--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "axios": "^0.27.2",
-    "json-server": "^0.4.2"
+    "events": "^3.3.0",
+    "json-server": "^0.4.2",
+    "uuidv4": "^6.2.13"
   }
 }
