--- a/week-2-wide-perspective/w02e02-data-manipulation/package.json
+++ b/week-2-wide-perspective/w02e02-data-manipulation/package.json
@@ -1,5 +1,21 @@
 {
   "name": "w02e02-data-manipulation",
   "version": "1.0.0",
-  "dependencies": {}
+  "scripts": {
+    "dev": "vite",
+    "server": "npx ts-node server.ts",
+    "fetch": "npx ts-node src/main.ts",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/json-server": "^0.14.4",
+    "json-server": "^0.17.0",
+    "vite": "^3.1.0"
+  }
 }
