--- a/week-1-ts-ecosystem/w01e05-my-own-cli/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e05-my-own-cli/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "declaration": true, // for d.ts file
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
