--- a/week-1-ts-ecosystem/w01e05-my-own-cli/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e05-my-own-cli/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "es2017",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "declaration": true, // for d.ts file
