Add solution to the W02E01 exercise

--- a/week-2-wide-perspective/w02e01-functional-warm-up/package.json
+++ b/week-2-wide-perspective/w02e01-functional-warm-up/package.json
@@ -1,6 +1,10 @@
 {
   "name": "w02e01-functional-warm-up",
   "version": "1.0.0",
+  "author": "Dariusz Gala",
   "dependencies": {},
+  "scripts": {
+    "start": "node ./src/main.js"
+  },
   "type": "module"
 }
