--- a/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
+++ b/week-2-wide-perspective/w02e05-simple-server-side/tsconfig.json
@@ -6,6 +6,10 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types",
+    ]  
+  },
 }
