change tsconfig strict to true, changed target

--- a/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
+++ b/week-1-ts-ecosystem/w01e02-enter-the-world-of-typescript/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./built",
-    "allowJs": true,
-    "target": "es5"
+    "outDir": "./dist",
+    "target": "ES2020",
+    "strict": true
   },
   "include": ["./src/**/*"]
 }
