implementation of excercise 2

--- a/week-1-ts-ecosystem/w01e04-light-me-up/package.json
+++ b/week-1-ts-ecosystem/w01e04-light-me-up/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "excercise1": "nodemon src/e1.ts",
+    "excercise2": "nodemon src/e2.ts",
     "build": "tsc"
   },
   "devDependencies": {
